새로운 frontend 디자인으로 다시 생성, 백엔드 로직과 연동 시작