@@ -1,11 +1,8 @@
 package com.pharma.inventory.config;
 
-import com.pharma.inventory.security.JwtAuthenticationEntryPoint;
-import com.pharma.inventory.security.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
@@ -14,13 +11,10 @@ import org.springframework.security.config.annotation.method.configuration.Enabl
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
-import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -30,147 +24,80 @@ import java.util.List;
 
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity(prePostEnabled = true) // 메소드 보안 활성화
+@EnableMethodSecurity(prePostEnabled = true)
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final JwtAuthenticationFilter jwtAuthFilter;
-    private final JwtAuthenticationEntryPoint jwtAuthEntryPoint;
     private final UserDetailsService userDetailsService;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            // CSRF 비활성화 (JWT 사용)
             .csrf(AbstractHttpConfigurer::disable)
-            
-            // CORS 설정
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            
-            // 세션 관리 설정 (STATELESS - JWT 사용)
-            .sessionManagement(session -> 
-                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+
+            // 폼 로그인 설정
+            .formLogin(form -> form
+                .loginPage("/auth/login") // 사용자 정의 로그인 페이지
+                .loginProcessingUrl("/auth/login") // 로그인 처리 URL (폼이 POST 요청을 보낼 곳)
+                .defaultSuccessUrl("/dashboard", true) // 로그인 성공 시 리디렉션될 기본 URL
+                .failureUrl("/auth/login?error=true") // 로그인 실패 시 URL
+                .permitAll()
             )
-            
-            // 예외 처리
-            .exceptionHandling(exception -> 
-                exception.authenticationEntryPoint(jwtAuthEntryPoint)
+
+            // 로그아웃 설정
+            .logout(logout -> logout
+                .logoutUrl("/auth/logout")
+                .logoutSuccessUrl("/auth/login?logout=true")
+                .invalidateHttpSession(true) // 세션 무효화
+                .deleteCookies("JSESSIONID") // 쿠키 삭제
+                .permitAll()
             )
-            
-            // H2 Console을 위한 설정 (개발 환경에서만 사용)
-            .headers(headers -> 
-                headers.frameOptions(HeadersConfigurer.FrameOptionsConfig::sameOrigin)
-            )
-            
+
             // URL 기반 권한 설정
             .authorizeHttpRequests(auth -> auth
-                // 공개 API & UI 경로
                 .requestMatchers(
-                    // === UI / Views (Thymeleaf) ===
+                    // 공개적으로 접근 가능한 경로
                     "/",
+                    "/dashboard",
                     "/auth/login",
                     "/auth/register",
-
-                    // === Static Resources ===
                     "/css/**",
                     "/js/**",
                     "/images/**",
                     "/webjars/**",
                     "/favicon.ico",
-
-                    // === API ===
-                    "/api/auth/login",
-                    "/api/auth/register",
-                    "/api/auth/refresh",
-                    "/api/auth/forgot-password",
-                    "/api/auth/reset-password",
-                    "/api/auth/verify-email",
-                    "/api/auth/validate",
-                    "/api/public/**",
-                    
-                    // === Swagger & H2 & Error ===
+                    "/error",
+                    // API 문서 및 H2 콘솔
                     "/swagger-ui/**",
-                    "/swagger-ui.html",
                     "/v3/api-docs/**",
-                    "/swagger-resources/**",
-                    "/webjars/**",
-                    "/h2-console/**",
-                    "/error"
+                    "/h2-console/**"
                 ).permitAll()
                 
-                // 의약품 조회는 모든 인증 사용자
-                .requestMatchers(HttpMethod.GET, "/api/medicines/**").authenticated()
+                // 인증이 필요한 페이지
+                .requestMatchers("/medicines/**", "/stocks/**", "/transactions/**", "/users/**").authenticated()
                 
-                // 의약품 생성/수정/삭제는 ADMIN만
-                .requestMatchers(HttpMethod.POST, "/api/medicines/**").hasRole("ADMIN")
-                .requestMatchers(HttpMethod.PUT, "/api/medicines/**").hasRole("ADMIN")
-                .requestMatchers(HttpMethod.PATCH, "/api/medicines/**").hasRole("ADMIN")
-                .requestMatchers(HttpMethod.DELETE, "/api/medicines/**").hasRole("ADMIN")
-                
-                // 재고 관리는 MANAGER 이상
-                .requestMatchers("/api/stocks/**").hasAnyRole("MANAGER", "ADMIN")
-                
-                // 리포트는 인증된 사용자
-                .requestMatchers("/api/reports/**").authenticated()
-                
-                // Actuator endpoints
-                .requestMatchers("/actuator/health").permitAll()
-                .requestMatchers("/actuator/**").hasRole("ADMIN")
-                
-                // 나머지는 인증 필요
+                // 나머지 모든 요청은 인증된 사용자만 접근 가능
                 .anyRequest().authenticated()
-            )
-            
-            // JWT 필터 추가
-            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
-            
-            // Authentication Provider 설정
-            .authenticationProvider(authenticationProvider());
-        
+            );
+
+        http.authenticationProvider(authenticationProvider());
+
         return http.build();
     }
 
-    /**
-     * CORS 설정
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        
-        // 허용할 Origin (프론트엔드 개발 서버)
-        configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000",
-            "http://localhost:8080"
-        ));
-        
-        // 허용할 HTTP 메소드
-        configuration.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
-        ));
-        
-        // 허용할 헤더
+        configuration.setAllowedOrigins(List.of("http://localhost:8080"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
-        
-        // 인증 정보 허용
         configuration.setAllowCredentials(true);
-        
-        // 노출할 헤더
-        configuration.setExposedHeaders(Arrays.asList(
-            "Authorization",
-            "Content-Type",
-            "X-Total-Count"
-        ));
-        
-        // 설정을 적용할 URL 패턴
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-        
         return source;
     }
 
-    /**
-     * 인증 Provider 설정
-     */
     @Bean
     public AuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
@@ -179,18 +106,11 @@ public class SecurityConfig {
         return authProvider;
     }
 
-    /**
-     * 인증 Manager
-     */
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) 
-            throws Exception {
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
-    /**
-     * 패스워드 인코더
-     */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
